@startuml
class Network {
    - Network(id:int, name:string)
}
class DevNet {
    + DevNet()
}
class TestNet {
    + TestNet()
}
class MainNet {
    + MainNet()
}
Enumeration <|-- Network
Network o-> "Main" Network
Network o-> "Test" Network
Network o-> "Dev" Network
Network +-- DevNet
Network <|-- DevNet
Network +-- TestNet
Network <|-- TestNet
Network +-- MainNet
Network <|-- MainNet
@enduml
